--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,13 +9,23 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
+                        "1 Hips Don't Lie (feat. Wyclef Jean) 87 218.093\n",
+                        "2 TQG 84 197.933\n",
+                        "3 Dia de Enero 81 173.133\n",
+                        "4 Antologia 79 254.24\n",
+                        "5 Inevitable 79 192.866\n",
+                        "6 Shakira: Bzrp Music Sessions, Vol. 53 78 214.945\n",
+                        "7 Waka Waka (This Time for Africa) [The Official 2010 FIFA World Cup (TM) Song] (feat. Freshlyground) 74 202.466\n",
+                        "8 Whenever, Wherever 76 196.16\n",
+                        "9 Chantaje (feat. Maluma) 77 195.84\n",
+                        "10 Can't Remember to Forget You (feat. Rihanna) 74 206.866\n",
                         "Top 10 canciones de Shakira:\n",
                         "1: Hips Don't Lie (feat. Wyclef Jean) - Popularidad: 87\n",
                         "2: TQG - Popularidad: 84\n",
@@ -39,6 +49,8 @@
                 "# load the .env file variables\n",
                 "load_dotenv()\n",
                 "\n",
+                "#CLIENT_ID=\"cf47b75cbc154faabb0f5b6829216883\"\n",
+                "#CLIENT_SECRET=\"fc9b3559bb9247d7a9e20cbcdb1b4037\"\n",
                 "\n",
                 "client_id = os.environ.get(\"CLIENT_ID\")\n",
                 "client_secret = os.environ.get(\"CLIENT_SECRET\")\n",
@@ -57,6 +69,15 @@
                 "top_tracks = sp.artist_top_tracks(sh_url)\n",
                 "artist_name = \"Shakira\"\n",
                 "\n",
+                "for idx, track in enumerate(top_tracks['tracks'][:10]):\n",
+                "    nombre= track[\"name\"]\n",
+                "    popularidad= track[\"popularity\"]\n",
+                "    duracion_ms = track[\"duration_ms\"]\n",
+                "    duracion_s = duracion_ms /1000\n",
+                "\n",
+                "    print(idx+1, nombre, popularidad, duracion_s)\n",
+                "\n",
+                "ds= pd.DataFrame    \n",
                 "print(f\"Top 10 canciones de {artist_name}:\")\n",
                 "for idx, track in enumerate(top_tracks['tracks'][:10]):\n",
                 "    print(f\"{idx + 1}: {track['name']} - Popularidad: {track['popularity']}\")\n",
